# MythECS

./: CMakeLists.txt  LICENSE  README.md
cmake/: DependencyFetch.cmake
src/: CMakeLists.txt
src/mythecs/core/: concept.hpp
src/mythecs/core/container/: sparse_set.hpp
src/mythecs/ecs/: entity.hpp
src/mythecs/include/: ecs.hpp
src/mythecs/storage/: entity_set.hpp
tests/: CMakeLists.txt
tests/cmake/: Utilities.cmake
tests/src/unit/src/: main.cc
tests/src/unit/src/core/: concept.cc
tests/src/unit/src/core/container/: sparse_set.cc
tests/src/unit/src/ecs/: entity.cc
tests/src/unit/src/storage/: entity_set.cc
